<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">OMGAndroid</string>
  <string name="hello_world">Hello world!</string>
  <!-- actionmenu -->
  <string name="action_menu_link">Link to DropBox</string>
  <string name="action_menu_unlink">UnLink to DropBox</string>
  <string name="action_menu_create_file">Create File</string>
  <string name="action_menu_upload">Upload</string>
  <string name="action_menu_download">Download</string>
  <string name="action_menu_settings">Settings</string>
  <string name="action_menu_about">About</string>
  <string name="action_menu_quit">Quit</string>
  <!-- dropbox -->
  <string name="dropbox_appkey">bqmouv1qnm9dmuq</string>
  <string name="dropbox_appsecret">xrj1e1nhfetcnxi</string>

</resources>
