<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.koakh.androiddropsyncapi.MainActivity">

  <item
    android:id="@+id/action_menu_link"
    android:enabled="false"
    android:orderInCategory="100"
    android:title="@string/action_menu_link"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_unlink"
    android:enabled="true"
    android:orderInCategory="100"
    android:title="@string/action_menu_unlink"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_create_file"
    android:enabled="false"
    android:orderInCategory="100"
    android:title="@string/action_menu_create_file"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_download"
    android:orderInCategory="100"
    android:title="@string/action_menu_download"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_upload"
    android:orderInCategory="100"
    android:title="@string/action_menu_upload"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_settings"
    android:orderInCategory="100"
    android:title="@string/action_menu_settings"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_about"
    android:orderInCategory="100"
    android:title="@string/action_menu_about"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_quit"
    android:orderInCategory="100"
    android:title="@string/action_menu_quit"
    app:showAsAction="never"/>

</menu>
